--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.7.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.9",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.3",
+    "nodemon": "^1.19.4",
     "pug": "2.0.0-beta11"
   }
 }
