--- a/public/vue-public/package.json
+++ b/public/vue-public/package.json
@@ -8,13 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
     "core-js": "^3.3.2",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "underscore": "^1.9.1",
+    "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuejs-datepicker": "^1.6.2",
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -35,7 +41,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
