--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.9",
+    "mongoose": "^5.7.12",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.4",
-    "pug": "2.0.0-beta11"
+    "nodemon": "^1.19.4"
   }
 }
