--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "trash-treasure",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./APP_API/app"
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
+    "debug": "^2.6.9",
+    "express": "^4.16.4",
+    "http-errors": "^1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.12",
-    "morgan": "~1.9.1",
+    "mongoose": "^5.11.9",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.4"
   }
 }
