--- a/public/vue-public/package.json
+++ b/public/vue-public/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-public",
+  "name": "trash_treasure_web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,12 +10,16 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
-    "core-js": "^3.3.2",
+    "core-js": "^3.6.5",
+    "cxlt-vue2-toastr": "^1.1.1",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.20",
     "popper.js": "^1.16.0",
     "underscore": "^1.9.1",
     "vee-validate": "^3.0.11",
-    "vue": "^2.6.10",
+    "vue": "^2.6.12",
+    "vue-easy-toast": "^1.0.5",
+    "vue-generate-component": "^3.0.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vuejs-datepicker": "^1.6.2",
@@ -23,13 +27,13 @@
     "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-plugin-router": "^4.0.5",
-    "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0-0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -38,23 +42,17 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
-    "rules": {
-      "no-console": "off"
-    },
     "parserOptions": {
       "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
+    },
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not dead"
   ]
 }
